# Git-Summarizer

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/git_summarizer/: __init__.py  cli.py  config.py
src/git_summarizer/git/: __init__.py  analyzer.py
src/git_summarizer/integrations/: __init__.py  slack.py
src/git_summarizer/llm/: __init__.py  client.py  prompts.py
src/git_summarizer/output/: __init__.py  formatter.py  markdown_generator.py  prompts.py
